--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4",
-    "homepage": "http://chezynick.github.io/GenerationGame"
+    "homepage": "//http://chezynick.github.io/GenerationGame"
   },
   "scripts": {
     "start": "react-scripts start",
