--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4",
-    "homepage": "//https://chezynick.github.io/GenerationGame"
-  },
+    "web-vitals": "^0.2.4"
+  
+  }, 
+    "homepage": "https://chezynick.github.io/GenerationGame",
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
